syntax = "proto3";
option java_multiple_files = true;
package chat;

message SendMessageRequest {
  string message = 1;
  int32 senderId = 2;
  int32 receiverId = 3;
}

message GetMessagesRequest {
  int32 senderId = 1;
  int32 receiverId = 2;
}

message MessageResponse {
  int32 message_id = 1;
  int32 senderId = 2;
  int32 receiverId = 3;
  string message = 4;
  string timestamp = 5;
}

message GetMessagesResponse {
  repeated MessageResponse messages = 1;
}

message GetAllMessagesResponse{
  string list = 1;
}

message EmptyMessageResponse {
}
message EmptyMessageRequest {
}

service ChatService {
  rpc SendMessage (SendMessageRequest) returns (EmptyMessageResponse);
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
  rpc GetAllMessages (EmptyMessageRequest) returns (GetAllMessagesResponse);
}